# ZuccItUp-fork

./: .gitignore  DB_init.py  DB_validation.py  README.md  requirements.txt  test.txt
DatabaseSetup/: DB_menu.py  DB_users.py  DB_validation.py
Demo/: Makefile
Demo/include/: init.txt  server.hpp
Demo/src/: main.cpp  server.cpp
Documents/: A2ProjectPlan-2.md  KingKirby.txt
UnitTests/: test1.py
cpp-mongodb-app/: .env.example  .gitignore  CMakeLists.txt  Dockerfile  PRODUCTION.md  README.md  docker-compose.yml
cpp-mongodb-app/include/: config.h  database.h
cpp-mongodb-app/src/: database.cpp  main.cpp
src/: agent.py  customer.py  main.py  menu.py  notification.py  order.py  query.py  server.py  user.py
tests/: conftest.py  test_menu.py  test_order.py  test_server.py  test_user.py
